exstract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=0f6e13ac701d580d70df
+github.client.secret=4ab0a60bf068065760ee5c4fc8271420eb541d3e
+github.redirect.uri=http://localhost:8887/callback
